--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -24,7 +24,17 @@
 .messages {
     padding: 1em;
 }
+.messages form{
+    width: 100%;
+}
+.messages form button{
+    margin-bottom: 0;
+}
 
+.messages textarea {
+    width: 100%;
+    margin: 0 0 0.5em;
+}
 .message {
     display: block;
     margin-bottom: 1em;
