--- a/src/components/Profile/info/Info.module.css
+++ b/src/components/Profile/info/Info.module.css
@@ -67,6 +67,7 @@ ul{
 .me {
     font-size: .9em;
     color: rgb(26,111,182);
+    margin-top: 1em;
 }
 /************************************userContact**************************************************/
 .contacts{
