--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -27,10 +27,14 @@
 .messages form{
     width: 100%;
 }
+.messages form span{
+    float: left;
+    color: rgb(179,22,111);
+    font-size: .9em;
+}
 .messages form button{
     margin-bottom: 0;
 }
-
 .messages textarea {
     width: 100%;
     margin: 0 0 0.5em;
