--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -24,7 +24,15 @@ h5 {
     width: 100%;
     margin: 0 0 0.5em;
 }
+.field span{
+    float: left;
+    color: rgb(179,22,111);
+    font-size: .9em;
+}
 
 .posts {
     margin-left: 20px;
+}
+.error{
+    border: 1px solid rgb(179,22,111);
 }
