updated login-form validation

--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -53,3 +53,11 @@
     justify-content: center;
     margin: 15px auto;
 }
+.loginForm .error{
+    display: flex;
+    line-height: 32px;
+    font-size: 1em;
+    color: rgb(179,22,111);
+    flex-flow: row nowrap;
+    justify-content: center;
+}
