--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,28 @@
+.paginator {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+    margin: 1em 10em 1em 1em;
+}
+
+.paginator button {
+    margin: 0 5px 0 0;
+    padding: 0;
+    font-size: 20px;
+    border: none;
+    text-align: start;
+}
+
+.paginator button:hover{
+    background: none;
+    color: #78be21;
+}
+
+.paginator span{
+    margin-right: 5px;
+    padding-top: 4px;
+}
+
 .selectedPage {
     font-weight: bold;
     color: #78be21;
