--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -3,7 +3,7 @@ h1 {
     font-size: 1em;
     color: rgb(179, 22, 111);
     text-transform: uppercase;
-    margin: 0 0 0 0.5em;
+    margin: 50px 0 0 0.5em;
 }
 
 h5 {
