--- a/src/components/Profile/info/Info.module.css
+++ b/src/components/Profile/info/Info.module.css
@@ -4,18 +4,29 @@
     column-gap: 1em;
 }
 
-/*.view img {*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*}*/
 
 .info img {
-    width: 100%;
-    height: auto;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    vertical-align: middle;
+    object-fit: contain;
+    order: 0;
+    flex-grow: 0;
+    filter: drop-shadow(0px 4px 35px rgba(168, 172, 176, 0.19));
+    margin-bottom: 10px;
 }
 
 .photo {
     flex: 1;
+}
+
+.photo label{
+    font-size: .9em;
+    color: #78be21;
+    border-radius: 2px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .photoInfo {
