--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -21,6 +21,12 @@ h5 {
 }
 
 .field textarea {
+    height: 50px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 14px;
+    resize: none;
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
     margin: 0 0 0.5em;
 }
@@ -32,7 +38,12 @@ h5 {
 
 .posts {
     margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 80%;
 }
+
 .error{
     border: 1px solid rgb(179,22,111);
 }
