--- a/src/components/login/Login.module.css
+++ b/src/components/login/Login.module.css
@@ -24,8 +24,10 @@
     line-height: 32px;
 }
 
-.loginForm input {
+.loginForm div input {
     flex: 1;
+    width: inherit;
+    height: inherit;
     padding: 3px 5px;
     font-size: 1em;
     margin-left: 15px;
